# openapi.yaml
@@ -83,6 +83,45 @@ paths:
           description: 'Api token is valid.'
         '401':
           description: Unauthenticated.
+  /reset-password:
+    post:
+      tags:
+        - Authentication
+      summary: 'Reset the users password.'
+      operationId: 52c2272380505eb92a21c96839d200f9
+      requestBody:
+        description: 'User credentials.'
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - email
+                - password
+                - password_confirmation
+                - token
+              properties:
+                email:
+                  type: string
+                  example: user@app.com
+                password:
+                  type: string
+                  example: password
+                password_confirmation:
+                  type: string
+                  example: password
+                token:
+                  description: 'The token is sent to the users email address.'
+                  type: string
+                  example: token
+              type: object
+      responses:
+        '200':
+          description: 'Password reset.'
+        '400':
+          description: 'Invalid token.'
+        '422':
+          description: 'Invalid credentials.'
   mail/password-reset:
     post:
       tags:
